--- a/db-read-write/pom.xml
+++ b/db-read-write/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.shardingsphere</groupId>
-        <artifactId>demo</artifactId>
+        <artifactId>shardingsphere</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
