--- a/db-read-write/src/main/resources/application.yml
+++ b/db-read-write/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     allow-bean-definition-overriding: true
   shardingsphere:
     datasource:
-      names: master,slave0
+      names: master,slave
       master:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
@@ -13,7 +13,7 @@ spring:
       slave:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/slave0?characterEncoding=utf-8
+        url: jdbc:mysql://localhost:3306/slave?characterEncoding=utf-8
         username: root
         password: root
     masterslave:
