--- a/sharding-db/src/main/resources/application.yml
+++ b/sharding-db/src/main/resources/application.yml
@@ -19,12 +19,17 @@ spring:
 
     sharding:
       default-database-strategy:
-        standard:
+        inline: # 行表达式分片策略
           sharding-column: id
-          precise-algorithm-class-name: com.shadingsphere.shardingdb.shadingsphere.PreciseAlgorithmClassName
-        none:
-          any: none
+          algorithm-expression: db$->{id%2}
+      binding-tables: user # 绑定表规则列表
+      broadcast-tables: user # 广播表规则列表
       default-data-source-name: db0
+      tables:
+        user:
+          key-generator:
+            column: id # 自增列名称，缺省表示不使用自增主键生成器
+            type: SNOWFLAKE # 指定自增列值生成器类型，缺省表示使用默认自增列值生成器。可使用用户自定义的列值生成器或选择内置类型：SNOWFLAKE/UUID
     props:
       sql:
         show: true
