--- a/db-read-write/src/main/resources/application.yml
+++ b/db-read-write/src/main/resources/application.yml
@@ -7,13 +7,13 @@ spring:
       master:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/master?characterEncoding=utf-8
+        url: jdbc:mysql://localhost:3306/master?characterEncoding=utf-8&serverTimezone=UTC
         username: root
         password: root
       slave:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://localhost:3307/master?characterEncoding=utf-8
+        url: jdbc:mysql://localhost:3307/master?characterEncoding=utf-8&serverTimezone=UTC
         username: root
         password: root
     masterslave:
